--- a/tex_files/chapter-conclusion.tex
+++ b/tex_files/chapter-conclusion.tex
@@ -1,21 +1,5 @@
 % !TEX root = ../my-thesis.tex
 %
 \chapter{Conclusion}
-\label{sec:conclusion}
-
-\Blindtext[2][1]
-
-\section{System Section 1}
-\label{sec:conclusion:sec1}
-
-\Blindtext[2][2]
-
-\section{System Section 2}
-\label{sec:conclusion:sec2}
-
-\Blindtext[3][2]
-
-\section{Future Work}
-\label{sec:conclusion:future}
-
-\Blindtext[2][2]
+This research aimed to identify factors that have a significant influence on the spread of Covid-19 in Germany and Norway using Bayesian modelling. Based on the calculated models, it can be concluded that the population density, the percentage of the vote for the right-wing party AfD and the logarithmic trade tax are important factors influencing the spread of the viral disease in Germany. For Norway, it was found that the urban density, the number of unemployed immigrants, the total number of immigrants as well as the number of aerodromes in a municipality and the female to male ratio are important factors. The results indicate that in different countries different factors are influencing infection numbers. It has to be said however, that some of the findings are not in line with current research, specifically the influence of the logarithmic trade tax, the number of aerodromes and the proportion of females. 
+blabla why spatio-temporal models were not possible blabla predictive models might make sense for norway bc spatial effect not that strong
